--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="d-flex flex-column  gap-1">
       <input type="text" id="length" class="my-2" placeholder="Enter any text">
     </div>
-      <button type="submit" id="lenbtn">Enter</button>
+      <button class="rounded-3 border-0" type="submit" id="lenbtn">Enter</button>
       <p>The length of your array is:</p>
       <p id="arrlen"></p>
     </div>
@@ -28,7 +28,7 @@
       <div class="d-flex flex-column  gap-1">
       <input type="text" id="tostring" class="my-2" placeholder="Enter any text">
       </div>
-      <button type="submit" id="strbtn">Enter</button>
+      <button class="rounded-3 border-0" type="submit" id="strbtn">Enter</button>
       <p>The Output is:</p>
       <p id="arrstr"></p>
     </div>
@@ -39,7 +39,7 @@
       <input type="text" id="concat" class="my-2" placeholder="Enter any text"><br>
       <input type="text" id="newconc" class="my-2" placeholder="Enter any text">
       </div>
-      <button type="submit" id="concbtn">Enter</button>
+      <button class="rounded-3 border-0" type="submit" id="concbtn">Enter</button>
       <p>The Output is:</p>
       <p id="arrconc"></p>
     </div>
@@ -51,7 +51,7 @@
       <input type="text" id="slival1" class="my-2" placeholder="Enter 1st value"><br>      
       <input type="text" id="slival2" class="my-2" placeholder="Enter 2nd value"><br>
       </div>
-      <button type="submit" id="slibtn">Enter</button>
+      <button class="rounded-3 border-0" type="submit" id="slibtn">Enter</button>
       <p>The Output is:</p>
       <p id="arrslice"></p>
     </div>
@@ -63,7 +63,7 @@
       <input type="text" id="splival1" class="my-2" placeholder="Enter 1st value"><br>      
       <input type="text" id="splival2" class="my-2" placeholder="Enter 2nd value"><br>
       </div>
-      <button type="submit" id="splibtn">Enter</button>
+      <button class="rounded-3 border-0" type="submit" id="splibtn">Enter</button>
       <p>The Output is:</p>
       <p id="arrsplice"></p>
     </div>
@@ -73,7 +73,7 @@
       <div class="d-flex flex-column  gap-1">
       <input type="text" id="shift" class="my-2" placeholder="Enter any text">
       </div>
-      <button type="submit" id="shiftbtn">Enter</button>
+      <button class="rounded-3 border-0" type="submit" id="shiftbtn">Enter</button>
       <p>The Output is:</p>
       <p id="arrshift"></p>
     </div>
@@ -84,7 +84,7 @@
       <input type="text" id="unshift" class="my-2" placeholder="Enter any text"><br>
       <input type="text" id="newunshift" class="my-2" placeholder="Enter unshift value">
       </div>
-      <button type="submit" id="unshiftbtn">Enter</button>
+      <button class="rounded-3 border-0" type="submit" id="unshiftbtn">Enter</button>
       <p>The Output is:</p>
       <p id="arrunshift"></p>
     </div>
@@ -94,7 +94,7 @@
       <div class="d-flex flex-column  gap-1">
       <input type="text" id="pop" class="my-2" placeholder="Enter any text">
       </div>
-      <button type="submit" id="popbtn">Enter</button>
+      <button class="rounded-3 border-0" type="submit" id="popbtn">Enter</button>
       <p>The Output is:</p>
       <p id="arrpop"></p>
     </div>
@@ -105,7 +105,7 @@
       <input type="text" id="push" class="my-2" placeholder="Enter input"><br>
       <input type="text" id="newpush" class="my-2" placeholder="Enter push value">
       </div>
-      <button type="submit" id="pushbtn">Enter</button>
+      <button class="rounded-3 border-0" type="submit" id="pushbtn">Enter</button>
       <p>The Output is:</p>
       <p id="arrpush"></p>
     </div>
@@ -116,7 +116,7 @@
       <input type="text" id="join" class="my-2" placeholder="Enter any text"><br>
       <input type="text" id="newjoin" class="my-2" placeholder="Enter join value">
       </div>
-      <button type="submit" id="joinbtn">Enter</button>
+      <button class="rounded-3 border-0" type="submit" id="joinbtn">Enter</button>
       <p>The Output is:</p>
       <p id="arrjoin"></p>
     </div>
@@ -127,7 +127,7 @@
       <input type="text" id="delete" class="my-2" placeholder="Enter any text"><br>
       <input type="text" id="newdel" class="my-2" placeholder="Enter delete value">
       </div>
-      <button type="submit" id="delbtn">Enter</button>
+      <button class="rounded-3 border-0" type="submit" id="delbtn">Enter</button>
       <p>The Output is:</p>
       <p id="arrdel"></p>
     </div>
